--- a/archives/toutiao-search/2023-11-28.md
+++ b/archives/toutiao-search/2023-11-28.md
@@ -1,57 +1,76 @@
 # 2023-11-28
 
-共 261 条
+共 277 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 28 2023 19:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 20:09:15 GMT+0800 (China Standard Time) -->
 1. [从也门发射的导弹溅落在美军舰附近](https://so.toutiao.com/search?keyword=从也门发射的导弹溅落在美军舰附近)
 1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
 1. [冬季呼吸道疾病多发人群如何防治](https://so.toutiao.com/search?keyword=冬季呼吸道疾病多发人群如何防治)
 1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
 1. [军大衣花棉袄在大学生中风靡](https://so.toutiao.com/search?keyword=军大衣花棉袄在大学生中风靡)
-1. [《美丽的草原我的家》原唱德德玛去世](https://so.toutiao.com/search?keyword=《美丽的草原我的家》原唱德德玛去世)
-1. [王思聪穿休闲服见地方领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服见地方领导)
 1. [华为智界S7正式上市 售24.98万起](https://so.toutiao.com/search?keyword=华为智界S7正式上市+售24.98万起)
+1. [王思聪穿休闲服见地方领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服见地方领导)
+1. [滴滴二度回应服务异常](https://so.toutiao.com/search?keyword=滴滴二度回应服务异常)
 1. [美国女院士帮孩子做手术？医院辟谣](https://so.toutiao.com/search?keyword=美国女院士帮孩子做手术？医院辟谣)
+1. [黑龙江煤矿事故致11人遇难](https://so.toutiao.com/search?keyword=黑龙江煤矿事故致11人遇难)
+1. [腾格尔悼念德德玛](https://so.toutiao.com/search?keyword=腾格尔悼念德德玛)
 1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
+1. [华为：新公司已向“四界”发出邀请](https://so.toutiao.com/search?keyword=华为：新公司已向“四界”发出邀请)
+1. [《美丽的草原我的家》原唱德德玛去世](https://so.toutiao.com/search?keyword=《美丽的草原我的家》原唱德德玛去世)
+1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
+1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
+1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
+1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
+1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
+1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
+1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
+1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
+1. [男子称搓澡时因身材胖遭技师嘲笑](https://so.toutiao.com/search?keyword=男子称搓澡时因身材胖遭技师嘲笑)
+1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
+1. [南非一矿井发生事故已致11人死亡](https://so.toutiao.com/search?keyword=南非一矿井发生事故已致11人死亡)
+1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
+1. [龙芯中科董事长：龙芯IP一次性授权](https://so.toutiao.com/search?keyword=龙芯中科董事长：龙芯IP一次性授权)
+1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
+1. [朝鲜侦察卫星拍到美英航母](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍到美英航母)
+1. [川青铁路列车开行时刻表](https://so.toutiao.com/search?keyword=川青铁路列车开行时刻表)
+1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
+1. [高校寝室开理发店15元一剪 手艺满分](https://so.toutiao.com/search?keyword=高校寝室开理发店15元一剪+手艺满分)
+1. [鹅腿阿姨老伴回应走红](https://so.toutiao.com/search?keyword=鹅腿阿姨老伴回应走红)
+1. [潘功胜：中国正经历经济增长模式转型](https://so.toutiao.com/search?keyword=潘功胜：中国正经历经济增长模式转型)
+1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
+1. [火锅店回应锅底598元一份](https://so.toutiao.com/search?keyword=火锅店回应锅底598元一份)
+1. [专家谈西方殖民化的罪恶](https://so.toutiao.com/search?keyword=专家谈西方殖民化的罪恶)
+1. [假冒军人招摇撞骗？军警跨省出拳](https://so.toutiao.com/search?keyword=假冒军人招摇撞骗？军警跨省出拳)
+1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
+1. [阿根廷当选总统访白宫却见不到拜登](https://so.toutiao.com/search?keyword=阿根廷当选总统访白宫却见不到拜登)
+1. [中国10家航司取消近9000趟赴泰航班](https://so.toutiao.com/search?keyword=中国10家航司取消近9000趟赴泰航班)
+1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
+1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
+1. [亚冠：利雅得胜利0-0波斯波利斯](https://so.toutiao.com/search?keyword=亚冠：利雅得胜利0-0波斯波利斯)
+1. [央行行长谈房地产市场与地方债风险](https://so.toutiao.com/search?keyword=央行行长谈房地产市场与地方债风险)
+1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
+1. [刘德华父亲葬礼将以私人形式举行](https://so.toutiao.com/search?keyword=刘德华父亲葬礼将以私人形式举行)
+1. [潘功胜召开在港金融机构座谈会](https://so.toutiao.com/search?keyword=潘功胜召开在港金融机构座谈会)
+1. [美国白宫正式启动供应链韧性委员会](https://so.toutiao.com/search?keyword=美国白宫正式启动供应链韧性委员会)
+1. [北交所迎来减持潮](https://so.toutiao.com/search?keyword=北交所迎来减持潮)
 1. [黑龙江一煤矿发生事故多人失联](https://so.toutiao.com/search?keyword=黑龙江一煤矿发生事故多人失联)
 1. [美国高中生遭围殴 拔刀还击捅死1人](https://so.toutiao.com/search?keyword=美国高中生遭围殴+拔刀还击捅死1人)
-1. [华为：新公司已向“四界”发出邀请](https://so.toutiao.com/search?keyword=华为：新公司已向“四界”发出邀请)
-1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
 1. [李亚鹏任广东东莞市石龙镇党委书记](https://so.toutiao.com/search?keyword=李亚鹏任广东东莞市石龙镇党委书记)
 1. [美国和朝鲜代表在安理会激烈交锋](https://so.toutiao.com/search?keyword=美国和朝鲜代表在安理会激烈交锋)
 1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
-1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
 1. [海底捞回应科目三让顾客不适](https://so.toutiao.com/search?keyword=海底捞回应科目三让顾客不适)
-1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
-1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
-1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
-1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
-1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
 1. [多位司机还原滴滴系统故障](https://so.toutiao.com/search?keyword=多位司机还原滴滴系统故障)
-1. [中国10家航司取消近9000趟赴泰航班](https://so.toutiao.com/search?keyword=中国10家航司取消近9000趟赴泰航班)
 1. [日本船只进钓鱼岛领海 中国海警驱离](https://so.toutiao.com/search?keyword=日本船只进钓鱼岛领海+中国海警驱离)
 1. [什么是“煤矿冲击地压顶板”事故](https://so.toutiao.com/search?keyword=什么是“煤矿冲击地压顶板”事故)
-1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
 1. [巴以获释者讲述悲喜经历](https://so.toutiao.com/search?keyword=巴以获释者讲述悲喜经历)
-1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
 1. [合肥科大硅谷高新孵化园二期将开工](https://so.toutiao.com/search?keyword=合肥科大硅谷高新孵化园二期将开工)
 1. [余承东再提AEB：特斯拉被“碾压”](https://so.toutiao.com/search?keyword=余承东再提AEB：特斯拉被“碾压”)
-1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
-1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
 1. [专家谈福建舰成功电磁弹射“小车”](https://so.toutiao.com/search?keyword=专家谈福建舰成功电磁弹射“小车”)
-1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
-1. [高校寝室开理发店15元一剪 手艺满分](https://so.toutiao.com/search?keyword=高校寝室开理发店15元一剪+手艺满分)
-1. [腾格尔悼念德德玛](https://so.toutiao.com/search?keyword=腾格尔悼念德德玛)
-1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
-1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
 1. [俄乌战争走到了尽头吗](https://so.toutiao.com/search?keyword=俄乌战争走到了尽头吗)
-1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
 1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
 1. [《我本是高山》：点亮梦想与希望](https://so.toutiao.com/search?keyword=《我本是高山》：点亮梦想与希望)
-1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
 1. [男子网上“炸金花”被骗11万多元](https://so.toutiao.com/search?keyword=男子网上“炸金花”被骗11万多元)
-1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
 1. [媒体：以链为媒助推经济全球化发展](https://so.toutiao.com/search?keyword=媒体：以链为媒助推经济全球化发展)
 1. [宋忠平：福建舰又取得重要进展](https://so.toutiao.com/search?keyword=宋忠平：福建舰又取得重要进展)
 1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
@@ -99,9 +118,7 @@
 1. [媒体：体育“饭圈化”当休矣](https://so.toutiao.com/search?keyword=媒体：体育“饭圈化”当休矣)
 1. [美媒关注：福建舰进行电磁弹射试验](https://so.toutiao.com/search?keyword=美媒关注：福建舰进行电磁弹射试验)
 1. [胡静林任国家税务总局党委书记](https://so.toutiao.com/search?keyword=胡静林任国家税务总局党委书记)
-1. [鹅腿阿姨老伴回应走红](https://so.toutiao.com/search?keyword=鹅腿阿姨老伴回应走红)
 1. [山西回应859万采购防止返贫监测系统](https://so.toutiao.com/search?keyword=山西回应859万采购防止返贫监测系统)
-1. [滴滴二度回应服务异常](https://so.toutiao.com/search?keyword=滴滴二度回应服务异常)
 1. [直击京西2.5万吨大桥空中转体](https://so.toutiao.com/search?keyword=直击京西2.5万吨大桥空中转体)
 1. [荷兰大选“变天”欧洲为何感到惊吓](https://so.toutiao.com/search?keyword=荷兰大选“变天”欧洲为何感到惊吓)
 1. [男子称因太胖被搓澡师傅嘲笑](https://so.toutiao.com/search?keyword=男子称因太胖被搓澡师傅嘲笑)
@@ -119,7 +136,6 @@
 1. [为何医院床位紧张](https://so.toutiao.com/search?keyword=为何医院床位紧张)
 1. [大爷大妈电梯收垃圾 大哥等近1小时](https://so.toutiao.com/search?keyword=大爷大妈电梯收垃圾+大哥等近1小时)
 1. [霍震霆父子四人和郭晶晶合照](https://so.toutiao.com/search?keyword=霍震霆父子四人和郭晶晶合照)
-1. [火锅店回应锅底598元一份](https://so.toutiao.com/search?keyword=火锅店回应锅底598元一份)
 1. [吴京说和闫妮谭松韵都是“包子脸”](https://so.toutiao.com/search?keyword=吴京说和闫妮谭松韵都是“包子脸”)
 1. [百余万乌军阵亡失踪？乌媒闹大乌龙](https://so.toutiao.com/search?keyword=百余万乌军阵亡失踪？乌媒闹大乌龙)
 1. [马克龙买刮刮乐连中两次](https://so.toutiao.com/search?keyword=马克龙买刮刮乐连中两次)
